[gd_scene load_steps=2 format=2]

[ext_resource path="res://Prototype/Battle/UI/PartyMember.gd" type="Script" id=1]

[node name="PartyMember" type="HBoxContainer"]
margin_right = 177.0
margin_bottom = 14.0
alignment = 2
script = ExtResource( 1 )

[node name="NameLabel" type="Label" parent="."]
margin_right = 106.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
size_flags_horizontal = 3
text = "CharName"
align = 2

[node name="Spacer" type="Label" parent="."]
margin_left = 110.0
margin_top = 3.0
margin_right = 110.0
margin_bottom = 11.0

[node name="HPCurrentLabel" type="Label" parent="."]
margin_left = 114.0
margin_right = 138.0
margin_bottom = 14.0
rect_min_size = Vector2( 24, 14 )
text = "9999"
align = 2

[node name="Label3" type="Label" parent="."]
margin_left = 142.0
margin_right = 149.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
text = "/"

[node name="HPMaxLabel" type="Label" parent="."]
margin_left = 153.0
margin_right = 177.0
margin_bottom = 14.0
rect_min_size = Vector2( 24, 14 )
text = "9999"
